--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
+  <app-header></app-header>
 </div>
-<app-states-table></app-states-table>
-<!-- <router-outlet></router-outlet> -->
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
