--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -28,7 +28,14 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <a class="dropdown-item" routerLink="/subscription/bootstrap/states">Bootstrap</a>
               <a class="dropdown-item" routerLink="/subscription/material/states">Material</a>
-              <a class="dropdown-item" routerLink="#">Something else here</a>
+            </div>
+          </li>
+          <li routerLinkActive="active" class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Promise
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" routerLink="/promise/primeng/states">PrimeNG</a>
             </div>
           </li>
         </ul>
